corrects the structure and styles for the menu

--- a/source/index.html
+++ b/source/index.html
@@ -22,8 +22,8 @@
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
         <ul class="menu__list menu__list-catalog-order">
-          <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
         </ul>
         <ul class="menu__list menu__list-search-basket">
           <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
@@ -35,7 +35,7 @@
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link" href="#">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a>
           </li>
         </ul>
       </nav>
