--- a/source/index.html
+++ b/source/index.html
@@ -30,8 +30,8 @@
           <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
         </ul>
         <ul class="menu__list menu__list-new">
-          <li class="menu__item"><a class="menu__link" href="#">Новые поступления</a></li>
-          <li class="menu__item"><a class="menu__link" href="#">Распродажа</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
