:heavy_check_mark: Сборка #12

--- a/12/index.html
+++ b/12/index.html
@@ -17,17 +17,27 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
-      <a class="header__logo logo">
-        <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
-      </a>
-      <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
       <nav class="header__menu menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a class="menu__link" href="catalog.html">Каталог товаров</a></li>
-          <li class="menu__item"><a class="menu__link" href="form.html">Вязание на заказ</a></li>
+        <a class="header__logo logo">
+          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
+        </a>
+        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
+        <ul class="menu__list menu__list-catalog-order">
+          <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
+        </ul>
+        <ul class="menu__list menu__list-search-basket">
           <li class="menu__item"><a class="menu__link menu__link-search" href="#">Поиск по сайту</a></li>
           <li class="menu__item"><a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a></li>
-          <li class="menu__item menu__item-delivery"><a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a></li>
+        </ul>
+        <ul class="menu__list menu__list-new">
+          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Новые поступления</a></li>
+          <li class="menu__item"><a class="menu__link menu__link-new" href="#">Распродажа</a></li>
+        </ul>
+        <ul class="menu__list menu__list-delivery">
+          <li class="menu__item">
+            <a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a>
+          </li>
         </ul>
       </nav>
     </div>
