--- a/source/form.html
+++ b/source/form.html
@@ -123,7 +123,9 @@
   <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
-      <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      <a class="footer__logo-link" href="index.html">
+        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      </a>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
