--- a/source/index.html
+++ b/source/index.html
@@ -212,7 +212,9 @@
   <!-- Подвал сайта -->
   <footer class="footer">
     <div class="footer__inner">
-      <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      <a class="footer__logo-link">
+        <img class="footer__logo" src="img/logo-footer.svg" alt="Логотип Мишка">
+      </a>
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
