--- a/source/index.html
+++ b/source/index.html
@@ -56,13 +56,13 @@
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
           <div class="handwork__inner">
-            <p class="handwork__text-category">Предметы интерьера</p>
+            <p class="handwork__category">Предметы интерьера</p>
             <img class="handwork__image-itn" src="https://via.placeholder.com/150x150" width="40" height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner">
-            <p class="handwork__text-category">Детские игрушки</p>
+            <p class="handwork__category">Детские игрушки</p>
             <img class="handwork__image-toys" src="https://via.placeholder.com/150x150" width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
