fix class in baskets

--- a/source/index.html
+++ b/source/index.html
@@ -72,12 +72,12 @@
 <!-- Секция вязаных корзинок -->
     <section class="baskets">
       <div class="baskets__inner">
-        <div class="baskets__block-one">
+        <div class="baskets__good">
           <h2 class="baskets__title title">Вязаные корзинки</h2>
           <p class="baskets__week">Товар недели</p>
         </div>
         <div class="baskets__info">
-          <div class="baskets__block-two">
+          <div class="baskets__about-product">
             <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
             <table class="baskets__table">
               <tr class="baskets__desc-table">
@@ -112,12 +112,11 @@
           <img class="baskets__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Вязаные корзинки">
           <img class="baskets__image-desktop" src="img/triple-set-desktop@1x.jpg" width="525" height="636" alt="Вязаные корзинки">
         </div>
-
       </div>
     </section>
 
 <!-- Секция о нас -->
-    <section class="about-us">
+    <li class="about-us">
       <div class="about-us__inner">
         <h2 class="about-us__title title">Коротко о нас:</h2>
         <ul class="about-us__list">
@@ -147,7 +146,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </li>
 
 <!-- Секция отзывов -->
     <section class="reviews">
