--- a/source/index.html
+++ b/source/index.html
@@ -188,7 +188,7 @@
             </div>
           </div>
         </div>
-        <div class="contacts__map contacts__map-desctop">
+        <div class="contacts__map contacts__map-desktop">
           <img class="contacts__image" src="img/map-desktop@1x.jpg" width="525" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
           <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
         </div>
