deleted padding and created new pos.

--- a/source/index.html
+++ b/source/index.html
@@ -72,125 +72,132 @@
 <!-- Секция вязаных корзинок -->
     <section class="baskets">
       <div class="baskets__inner">
-        <div class="baskets__good">
-          <h2 class="baskets__title title">Вязаные корзинки</h2>
-          <p class="baskets__week">Товар недели</p>
-        </div>
-        <div class="baskets__info">
-          <div class="baskets__about-product">
-            <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
-            <table class="baskets__table">
-              <tr class="baskets__desc-table">
-                <td class="baskets__value">
-                  <p class="baskets__text">Цвет:</p>
-                </td>
-                <td class="baskets__field">
-                  <p class="baskets__text">«Тиффани»/серый</p>
-                </td>
-              </tr>
-              <tr class="baskets__desc-table">
-                <td class="baskets__value">
-                  <p class="baskets__text">Диаметр:</p>
-                </td>
-                <td class="baskets__field">
-                  <p class="baskets__text">25 см</p>
-                </td>
-              </tr>
-              <tr class="baskets__desc-table">
-                <td class="baskets__value">
-                  <p class="baskets__text">Высота:</p>
-                </td>
-                <td class="baskets__field">
-                  <p class="baskets__text">15 см</p>
-                </td>
-              </tr>
-            </table>
-            <img class="baskets__image-mobile" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
-            <p class="baskets__price">Цена: 990 руб.</p>
-            <button class="baskets__to-order-btn button" type="button">Заказать</button>
+        <div class="baskets__wrapper">
+          <div class="baskets__good">
+            <h2 class="baskets__title title">Вязаные корзинки</h2>
+            <p class="baskets__week">Товар недели</p>
           </div>
-          <img class="baskets__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Вязаные корзинки">
-          <img class="baskets__image-desktop" src="img/triple-set-desktop@1x.jpg" width="525" height="636" alt="Вязаные корзинки">
+          <div class="baskets__info">
+            <div class="baskets__about-product">
+              <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+              <table class="baskets__table">
+                <tr class="baskets__desc-table">
+                  <td class="baskets__value">
+                    <p class="baskets__text">Цвет:</p>
+                  </td>
+                  <td class="baskets__field">
+                    <p class="baskets__text">«Тиффани»/серый</p>
+                  </td>
+                </tr>
+                <tr class="baskets__desc-table">
+                  <td class="baskets__value">
+                    <p class="baskets__text">Диаметр:</p>
+                  </td>
+                  <td class="baskets__field">
+                    <p class="baskets__text">25 см</p>
+                  </td>
+                </tr>
+                <tr class="baskets__desc-table">
+                  <td class="baskets__value">
+                    <p class="baskets__text">Высота:</p>
+                  </td>
+                  <td class="baskets__field">
+                    <p class="baskets__text">15 см</p>
+                  </td>
+                </tr>
+              </table>
+              <img class="baskets__image-mobile" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+              <p class="baskets__price">Цена: 990 руб.</p>
+              <button class="baskets__to-order-btn button" type="button">Заказать</button>
+            </div>
+            <img class="baskets__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Вязаные корзинки">
+            <img class="baskets__image-desktop" src="img/triple-set-desktop@1x.jpg" width="525" height="636" alt="Вязаные корзинки">
+          </div>
         </div>
       </div>
     </section>
 
 <!-- Секция о нас -->
-    <li class="about-us">
+    <section class="about-us">
       <div class="about-us__inner">
-        <h2 class="about-us__title title">Коротко о нас:</h2>
-        <ul class="about-us__list">
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37" alt="Экологически чистые материалы">
-            <p class="about-us__text">Экологически чистые материалы</p>
-          </li>
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27" alt="Скандинавский стиль по российской цене">
-            <p class="about-us__text">Скандинавский стиль по российской цене</p>
-          </li>
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27" alt="Увеличивает лайкина фотографиях">
-            <p class="about-us__text">Увеличивает лайки на фотографиях</p>
-          </li>
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34" alt="Связано вручную с любовью и умилением">
-            <p class="about-us__text">Связано вручную с любовью и умилением</p>
-          </li>
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23" alt="Поддержка отечественного производителя">
-            <p class="about-us__text">Поддержка отечественного производителя</p>
-          </li>
-          <li class="about-us__item">
-            <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32" alt="Поставляется в подарочной упаковке">
-            <p class="about-us__text">Поставляется в подарочной упаковке</p>
-          </li>
-        </ul>
+        <div class="about-us__wrapper">
+          <h2 class="about-us__title title">Коротко о нас:</h2>
+          <ul class="about-us__list">
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="32" height="37" alt="Экологически чистые материалы">
+              <p class="about-us__text">Экологически чистые материалы</p>
+            </li>
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="47" height="27" alt="Скандинавский стиль по российской цене">
+              <p class="about-us__text">Скандинавский стиль по российской цене</p>
+            </li>
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="34" height="27" alt="Увеличивает лайкина фотографиях">
+              <p class="about-us__text">Увеличивает лайки на фотографиях</p>
+            </li>
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="35" height="34" alt="Связано вручную с любовью и умилением">
+              <p class="about-us__text">Связано вручную с любовью и умилением</p>
+            </li>
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="55" height="23" alt="Поддержка отечественного производителя">
+              <p class="about-us__text">Поддержка отечественного производителя</p>
+            </li>
+            <li class="about-us__item">
+              <img class="about-us__image" src="https://via.placeholder.com/150x150" width="33" height="32" alt="Поставляется в подарочной упаковке">
+              <p class="about-us__text">Поставляется в подарочной упаковке</p>
+            </li>
+          </ul>
+        </div>
       </div>
-    </li>
+    </section>
 
 <!-- Секция отзывов -->
     <section class="reviews">
       <div class="reviews__inner">
-        <h2 class="reviews__title title">Отзывы</h2>
-        <div class="reviews__slider">
-          <p class="reviews__text">
-            Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-          </p>
-          <p class="reviews__name">Анастасия Красильникова<br><span class="reviews__account">@misssssiskras</span></p>
-          <!-- <address class="reviews__account"></address> -->
-          <div class="reviews__slide">
-            <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
-            <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
+        <div class="reviews__wrapper">
+          <h2 class="reviews__title title">Отзывы</h2>
+          <div class="reviews__slider">
+            <p class="reviews__text">
+              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            </p>
+            <p class="reviews__name">Анастасия Красильникова<br><span class="reviews__account">@misssssiskras</span></p>
+            <!-- <address class="reviews__account"></address> -->
+            <div class="reviews__slide">
+              <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
+              <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
+            </div>
           </div>
+          <button type="button" class="reviews__write-btn button">Написать</button>
         </div>
-
-        <button type="button" class="reviews__write-btn button">Написать</button>
       </div>
     </section>
 
 <!-- Секция контактов -->
     <section class="contacts">
       <div class="contacts__inner">
-        <div class="contacts__contact">
-          <h2 class="contacts__title title">Контакты</h2>
-          <div class="contacts__info">
-            <div class="contacts__email">
-              <p class="contacts__value">e-mail:</p>
-              <p class="contacts__field contacts__field-line">info@mimimishkashop.ru</p>
-            </div>
-            <div class="contacts__address">
-              <p class="contacts__value">адрес:</p>
-              <p class="contacts__field">
-                г. Санкт-Петербург,<br>
-                ул. Большая Конюшенная,<br>
-                д. 19/8, офис 101
-              </p>
+        <div class="contacts__wrapper">
+          <div class="contacts__contact">
+            <h2 class="contacts__title title">Контакты</h2>
+            <div class="contacts__info">
+              <div class="contacts__email">
+                <p class="contacts__value">e-mail:</p>
+                <p class="contacts__field contacts__field-line">info@mimimishkashop.ru</p>
+              </div>
+              <div class="contacts__address">
+                <p class="contacts__value">адрес:</p>
+                <p class="contacts__field">
+                  г. Санкт-Петербург,<br>
+                  ул. Большая Конюшенная,<br>
+                  д. 19/8, офис 101
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="contacts__map contacts__map-desktop">
-          <img class="contacts__image" src="img/map-desktop@1x.jpg" width="525" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-          <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
+          <div class="contacts__map contacts__map-desktop">
+            <img class="contacts__image" src="img/map-desktop@1x.jpg" width="525" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
+          </div>
         </div>
       </div>
       <div class="contacts__map contacts__map-mobile">
