fix bugs and menu

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,11 @@
         <a class="header__logo logo">
           <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+        </button>
         <ul class="menu__list menu__list-catalog-order">
           <li class="menu__item"><a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
