makes layout more rubber

--- a/source/index.html
+++ b/source/index.html
@@ -110,12 +110,10 @@
                   </td>
                 </tr>
               </table>
-              <img class="baskets__image-mobile" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+              <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
             </div>
-            <img class="baskets__image-tablet" src="img/triple-set-tablet@1x.jpg" width="333" height="404" alt="Вязаные корзинки">
-            <img class="baskets__image-desktop" src="img/triple-set-desktop@1x.jpg" width="525" height="636" alt="Вязаные корзинки">
           </div>
         </div>
       </div>
