fix baskets position and contacts f-z

--- a/source/index.html
+++ b/source/index.html
@@ -82,8 +82,8 @@
             <p class="baskets__week">Товар недели</p>
           </div>
           <div class="baskets__info">
-            <div class="baskets__about-product">
-              <p class="baskets__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
+            <div class="baskets__description">
+              <p class="baskets__about-text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трех размерах.</p>
               <table class="baskets__table">
                 <tr class="baskets__desc-table">
                   <td class="baskets__value">
@@ -110,7 +110,9 @@
                   </td>
                 </tr>
               </table>
-              <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+            </div>
+            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+            <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
             </div>
@@ -204,10 +206,6 @@
       </div>
       <div class="contacts__map contacts__map-mobile">
         <img class="contacts__image" src="img/map-mobile@1x.jpg" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
-        <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
-      </div>
-      <div class="contacts__map contacts__map-tablet">
-        <img class="contacts__image" src="img/map-tablet@1x.jpg" width="768" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
         <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
       </div>
       <div class="contacts__inner contacts__inner-btn">
