--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w, img/logo-desktop.svg 1150w" alt="Логотип интернет магазина Мишка">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
           <span class="menu__line"></span>
@@ -199,7 +199,6 @@
             </div>
           </div>
           <div class="contacts__map contacts__map-desktop">
-            <img class="contacts__image" src="img/map-desktop@1x.jpg" width="525" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
             <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
           </div>
         </div>
