--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,9 +18,13 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип интернет магазина Мишка">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">Меню</button>
+        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+          <span class="menu__line"></span>
+        </button>
         <ul class="menu__list menu__list-catalog-order">
           <li class="menu__item"><a class="menu__link menu__link-catalog">Каталог товаров</a></li>
           <li class="menu__item"><a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a></li>
