--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-tablet.svg 768w, img/logo-desktop.svg 1150w" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип интернет магазина Мишка">
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
           <span class="menu__line"></span>
