fix baskets img, width and fz

--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
                 </tr>
               </table>
             </div>
-            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
+            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg" alt="Вязаные корзинки">
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button" type="button">Заказать</button>
