--- a/source/index.html
+++ b/source/index.html
@@ -198,13 +198,10 @@
               </div>
             </div>
           </div>
-          <div class="contacts__map contacts__map-desktop">
-            <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
-          </div>
         </div>
       </div>
-      <div class="contacts__map contacts__map-mobile">
-        <img class="contacts__image" src="img/map-mobile@1x.jpg" width="320" height="457" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
+      <div class="contacts__map">
+        <img class="contacts__image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
         <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
       </div>
       <div class="contacts__inner contacts__inner-btn">
