--- a/source/index.html
+++ b/source/index.html
@@ -18,9 +18,9 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
+        <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
           <span class="menu__line"></span>
           <span class="menu__line"></span>
@@ -166,7 +166,6 @@
               Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
             <p class="reviews__name">Анастасия Красильникова<br><span class="reviews__account">@misssssiskras</span></p>
-            <!-- <address class="reviews__account"></address> -->
             <div class="reviews__slide">
               <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
               <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
@@ -202,8 +201,8 @@
             <img class="contacts__image" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@1x.jpg 767w, img/map-tablet@1x.jpg 1149w, img/map-desktop@1x.jpg" alt="г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101">
             <img class="contacts__pin" src="https://via.placeholder.com/150x150" alt="" width="100" height="67">
           </div>
+          <button class="contacts__btn button">Напишите нам</button>
         </div>
-        <button class="contacts__btn button">Напишите нам</button>
       </div>
     </section>
 
