--- a/source/form.html
+++ b/source/form.html
@@ -18,9 +18,9 @@
     <div class="header__inner">
       <nav class="header__menu menu">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип интернет магазина Мишка">
+          <img class="logo__image" src="img/logo-mobile.svg" srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
         </a>
-        <button class="menu__btn" type="button" aria-label="Открыть меню для навигации на сайте">
+        <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
           <span class="menu__line"></span>
           <span class="menu__line"></span>
