--- a/source/index.html
+++ b/source/index.html
@@ -165,7 +165,10 @@
             <p class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
-            <p class="reviews__name">Анастасия Красильникова<br><span class="reviews__account">@misssssiskras</span></p>
+            <div class="reviews__user">
+              <p class="reviews__name">Анастасия Красильникова</p>
+              <p class="reviews__account">@misssssiskras</p>
+            </div>
             <div class="reviews__slide">
               <button class="reviews__btn-prev" type="button" aria-label="Предущий слайд">Предыдущий</button>
               <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
