creates a new mixin for the cover page and fixes errors

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,8 +52,8 @@
     <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - каталог товаров</h1>
 
-    <div class="title">
-      <p class="title__text page-title">Каталог товаров</p>
+    <div class="catalog__title-page">
+      <p class="catalog__page-text">Каталог товаров</p>
     </div>
 
 <!-- Секция каталога -->
