--- a/source/form.html
+++ b/source/form.html
@@ -52,8 +52,8 @@
     <!-- Для ридера -->
     <h1 class="visually-hidden">Интернет-магазин Мишка - форма заказа</h1>
 
-    <div class="title">
-      <p class="title__text title__text-form page-title">Вязание на заказ</p>
+    <div class="form__title-page">
+      <p class="form__page-text">Вязание на заказ</p>
     </div>
 
 <!-- Секция формы заказа -->
