--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
 <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text page-title">Милые штуки ручной работы для дома</p>
+        <p class="handwork__text">Милые штуки ручной работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
