--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,7 @@
         </ul>
         <ul class="menu__list menu__list-delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery" href="#">Бесплатная доставка по Росии</a>
+            <a class="menu__link menu__link-delivery">Бесплатная доставка по Росии</a>
           </li>
         </ul>
       </nav>
@@ -62,11 +62,10 @@
         <ul class="catalog__list">
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Зайчик-попрыгайчик">
+              <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@1x.jpg 767w, img/photo-hare-tablet@1x.jpg 1149w, img/photo-hare-desktop@1x.jpg" alt="Зайчик-попрыгайчик">
                 <div class="catalog__desc">
                   <p class="catalog__title">Зайчик-попрыгайчик</p>
                 <p class="catalog__text">Рост 30 см, вес 200 г</p>
-                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">1200 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -76,11 +75,10 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Корзинка для белья">
+              <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@1x.jpg 767w, img/photo-bowl-tablet@1x.jpg 1149w, img/photo-bowl-desktop@1x.jpg" alt="Корзинка для белья">
                 <div class="catalog__desc">
                   <p class="catalog__title">Корзинка для белья</p>
                 <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
-                <hr class="catalog__line line">
                 <div class="catalog__price">
                   <p class="catalog__money">690 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -90,11 +88,10 @@
           </li>
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="https://via.placeholder.com/150x150" width="260" height="195" alt="Большая корзина для игрушек">
+              <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@1x.jpg 767w, img/photo-toys-tablet@1x.jpg 1149w, img/photo-toys-desktop@1x.jpg" alt="Большая корзина для игрушек">
                 <div class="catalog__desc">
                   <p class="catalog__title catalog__title-basket">Большая корзина для игрушек</p>
-                <p class="catalog__text">Диаметр 30 см, высота 30 см</p>
-                <hr class="catalog__line line">
+                <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
                 <div class="catalog__price">
                   <p class="catalog__money">1500 руб.</p>
                   <img src="https://via.placeholder.com/150x150" width="20" height="19" alt="Иконка корзины">
@@ -107,7 +104,7 @@
               <img class="catalog__img" src="https://via.placeholder.com/150x150" width="32" height="22" alt="процес производства">
               <p class="catalog__title catalog__title-process">Процесс производства</p>
             </div>
-            <img class="catalog__video" src="https://via.placeholder.com/150x150" width="260" height="150" alt="Процесс производства">
+            <img class="catalog__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
             <p class="catalog__text catalog__text-process">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
             <button class="catalog__btn button" type="button">Сделать заказ</button>
           </li>
